# XDataExtractor

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: builder.yml
build_scripts/: README.md  build_linux.sh  build_msvc2019_x64.bat
doc/: BUILD.md  RUN.md
res/: license.txt  resource.rc  resource_icon.rc
src/: CMakeLists.txt  global.h
src/cli/: CMakeLists.txt  main_console.cpp
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogoptions.cpp  dialogoptions.h  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
src/gui/translation/: xde_ar_AR.ts  xde_bn_BN.ts  xde_de_DE.ts  xde_es_ES.ts  xde_fa_FA.ts  xde_fr_FR.ts  xde_he_IL.ts  xde_id_ID.ts  xde_it_IT.ts  xde_ja_JP.ts  xde_ko_KR.ts  xde_pl_PL.ts  xde_pt_BR.ts  xde_pt_PT.ts  xde_ru_RU.ts  xde_sv_SE.ts  xde_tr_TR.ts  xde_uk_UA.ts  xde_vi_VN.ts  xde_zh_CN.ts  xde_zh_TW.ts
